--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Dusko Jordanovski's github pages</title>
+    <script src="bower_components/angular/angular.min.js"></script>
   </head>
   <body id="index" onload="">
     <h1>Hello, here's an index of my pages</h1>
