--- a/index.html
+++ b/index.html
@@ -1,10 +1,91 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Dusko Jordanovski's github pages</title>
-    <script src="bower_components/angular/angular.min.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Dusko Jordanovski - Demo Pages</title>
+    <meta name="description" content="Various Javascript Demos">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,800' rel='stylesheet' type='text/css'>
+
+    <style type="text/css" media="screen">
+      @font-face {
+        font-family: 'OpenSans100';
+        src: url('static/fonts/opensans-100.woff2') format('woff2');
+      }
+      body {
+        font-family: "Open Sans";
+        font-weight: lighter;
+        margin: 0;
+        padding: 0;
+      }
+      a { color: #d84315; }
+      code { font-family: Monaco, monospace; font-size: 90%; background: white; padding: 2px 6px; border-radius: 3px; border: solid 1px #dfdfdf; }
+      header{
+        width: 100%;
+        text-align: center;
+        background: #00796b;
+        margin: 0;
+        padding: 20px;
+        overflow: auto;
+      }
+      header > h1 {
+        font-family: "OpenSans100";
+        color: #e0f2f1;
+        margin: 0;
+      }
+      header > p.subhead {
+        margin: 0;
+        font-family: "OpenSans100";
+        color: #e0f2f1;
+      }
+      main > ul {
+        width: 960px;
+        margin: 30px auto;
+        list-style-type: none;
+      }
+      main > ul > li {
+        margin: 10px 0;
+        padding: 10px;
+
+        background: #e0f2f1;
+        border-radius: 10px;
+        box-shadow: 0px 0px 3px #004d40;
+      }
+      main > ul > li > h3 {
+        font-weight: 800;
+        margin: 0;
+        color: #00796b;
+      }
+      main > ul > li > p {
+        margin: 5px 0;
+      }
+      main > ul > li > p.p {
+        margin: 10px 0;
+      }
+    </style>
   </head>
-  <body id="index" onload="">
-    <h1>Hello, here's an index of my pages</h1>
+
+  <body>
+    <header>
+      <h1>DEMO PAGES</h1>
+      <p class="subhead">Dusko Jordanovski</p>
+    </header>
+    <main>
+      <ul>
+        <li>
+          <h3>Angular-Widgetbox</h3>
+          <p class="p">
+            A module for angularJS that lets you place widgets into boxes and rearrange them
+            by draggin them and dropping them in other boxes. No dependencies except for angularJS and
+            document.querySelectorAll. If you've ever used iGoogle or my.yahoo - you know what I'm talking about.
+          </p>
+          <p>Checkout the <a href="angular-widgetbox.html">Demo</a></p>
+          <p>Get the code on <a href="http://github.com/skid/angular-widgetbox">Github</a></p>
+          <p>Or <code>bower install angular-widgetbox</code></p>
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
+
