--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             document.querySelectorAll. If you've ever used iGoogle or my.yahoo - you know what I'm talking about.
           </p>
           <p>Checkout the <a href="angular-widgetbox.html">Demo</a></p>
-          <p>Get the code on <a href="http://github.com/skid/angular-widgetbox">Github</a></p>
+          <p>Documentation and source code on <a href="http://github.com/skid/angular-widgetbox">Github</a></p>
           <p>Or <code>bower install angular-widgetbox</code></p>
         </li>
       </ul>
