--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </p>
           <p>Checkout the <a href="angular-widgetbox.html">Demo</a></p>
           <p>Documentation and source code on <a href="http://github.com/skid/angular-widgetbox">Github</a></p>
-          <p>Or <code>bower install angular-widgetbox</code></p>
+          <p>Quick Install <code>bower install angular-widgetbox</code></p>
         </li>
       </ul>
     </main>
