--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
           <h3>Angular-Widgetbox</h3>
           <p class="p">
             A module for angularJS that lets you place widgets into boxes and rearrange them
-            by draggin them and dropping them in other boxes. No dependencies except for angularJS and
-            document.querySelectorAll. If you've ever used iGoogle or my.yahoo - you know what I'm talking about.
+            by dragging them and dropping them in other boxes. No dependencies except for angularJS and
+            document.querySelectorAll. If you've ever used iGoogle or My Yahoo - you know what I'm talking about.
           </p>
           <p>Checkout the <a href="angular-widgetbox.html">Demo</a></p>
           <p>Documentation and source code on <a href="http://github.com/skid/angular-widgetbox">Github</a></p>
