--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
           <p>Documentation and source code on <a href="http://github.com/skid/angular-widgetbox">Github</a></p>
           <p>Quick Install <code>bower install angular-widgetbox</code></p>
         </li>
+        <li>
+          <h3>Microload</h3>
+          <p class="p">
+            A very tiny async script/stylesheet loader.
+          </p>
+          <p>Checkout the <a href="angular-widgetbox.html">Demo</a></p>
+          <p>Documentation and source code on <a href="http://github.com/skid/angular-widgetbox">Github</a></p>
+          <p>Quick Install <code>bower install angular-widgetbox</code></p>
+        </li>
       </ul>
     </main>
   </body>
