--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
           <h3>Microload</h3>
           <p class="p">
             A very tiny (less than 1KB) async script/stylesheet loader. You can load scripts consecutively and in parallel, 
-            then optionally execute a callback once all is done. It remembers which urls were loaded so it won't load the same
-            resources twice - but it will execute any 
+            then optionally execute a callback once all is done.
           </p>
           <p>Checkout the <a href="microload.html">Demo</a></p>
           <p>Documentation and source code on <a href="http://github.com/skid/microload">Github</a></p>
