--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <body>
     <header>
       <h1>DEMO PAGES</h1>
-      <p class="subhead">Dusko Jordanovski</p>
+      <p class="subhead">Dusko Jordanovski (<a href="http://discobot.net/">my homepage</a>)</p>
     </header>
     <main>
       <ul>
