--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         font-family: "OpenSans100";
         color: #e0f2f1;
       }
+      header > a {
+        color: #e0f2f1;
+      }
       main > ul {
         width: 960px;
         margin: 30px auto;
