--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       header > a {
         color: #e0f2f1;
       }
+      header > a:visited {
+        color: #e0f2f1;
+      }
       main > ul {
         width: 960px;
         margin: 30px auto;
