--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         font-family: "OpenSans100";
         color: #e0f2f1;
       }
-      header > a {
+      header a {
         color: #e0f2f1;
       }
-      header > a:visited {
+      header a:visited {
         color: #e0f2f1;
       }
       main > ul {
