--- a/microload.html
+++ b/microload.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,800' rel='stylesheet' type='text/css'>
-    <script src="static/js/microload.min.js"></script>
+    <script src="bower_components/microload/microload.min.js"></script>
 
     <style type="text/css" media="screen">
       body {
@@ -36,7 +36,7 @@
     </style>
   </head>
 
-  <body ng-app="AngularWidgetboxApp">
+  <body>
     <header>
       <h1>A demo of microload</h1>
       <p>The background should already be blue and you should see a bunch of statements after this one.</p>
