--- a/index.html
+++ b/index.html
@@ -4,102 +4,59 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Dusko Jordanovski - Demo Pages</title>
-    <meta name="description" content="Various Javascript Demos">
+    <meta name="description" content="Dusko Jordanovski's project demos">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,800' rel='stylesheet' type='text/css'>
-
-    <style type="text/css" media="screen">
-      @font-face {
-        font-family: 'OpenSans100';
-        src: url('static/fonts/opensans-100.woff2') format('woff2');
-      }
-      body {
-        font-family: "Open Sans";
-        font-weight: lighter;
-        margin: 0;
-        padding: 0;
-      }
-      a { color: #d84315; }
-      code { font-family: Monaco, monospace; font-size: 90%; background: white; padding: 2px 6px; border-radius: 3px; border: solid 1px #dfdfdf; }
-      header{
-        width: 100%;
-        text-align: center;
-        background: #00796b;
-        margin: 0;
-        padding: 20px;
-        overflow: auto;
-      }
-      header > h1 {
-        font-family: "OpenSans100";
-        color: #e0f2f1;
-        margin: 0;
-      }
-      header > p.subhead {
-        margin: 0;
-        font-family: "OpenSans100";
-        color: #e0f2f1;
-      }
-      header a {
-        color: #e0f2f1;
-      }
-      header a:visited {
-        color: #e0f2f1;
-      }
-      main > ul {
-        width: 960px;
-        margin: 30px auto;
-        list-style-type: none;
-      }
-      main > ul > li {
-        margin: 10px 0;
-        padding: 10px;
-
-        background: #e0f2f1;
-        border-radius: 10px;
-        box-shadow: 0px 0px 3px #004d40;
-      }
-      main > ul > li > h3 {
-        font-weight: 800;
-        margin: 0;
-        color: #00796b;
-      }
-      main > ul > li > p {
-        margin: 5px 0;
-      }
-      main > ul > li > p.p {
-        margin: 10px 0;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="static/layout.css">
+    <link rel="stylesheet" type="text/css" href="static/theme.css">
   </head>
-
   <body>
     <header>
-      <h1>DEMO PAGES</h1>
-      <p class="subhead">Dusko Jordanovski (<a href="http://discobot.net/">my homepage</a>)</p>
+      <h1>DEMOOOOS!</h1>
     </header>
     <main>
-      <ul>
-        <li>
-          <h3>Angular-Widgetbox</h3>
-          <p class="p">
-            A module for angularJS that lets you place widgets into boxes and rearrange them
-            by dragging them and dropping them in other boxes. No dependencies except for angularJS and
-            document.querySelectorAll. If you've ever used iGoogle or My Yahoo - you know what I'm talking about.
-          </p>
-          <p>Checkout the <a href="angular-widgetbox.html">Demo</a></p>
-          <p>Documentation and source code on <a href="http://github.com/skid/angular-widgetbox">Github</a></p>
-          <p>Quick Install <code>bower install angular-widgetbox</code></p>
-        </li>
-        <li>
-          <h3>Microload</h3>
-          <p class="p">
-            A very tiny (less than 1KB) async script/stylesheet loader. You can load scripts consecutively and in parallel, 
-            then optionally execute a callback once all is done.
-          </p>
-          <p>Checkout the <a href="microload.html">Demo</a></p>
-          <p>Documentation and source code on <a href="http://github.com/skid/microload">Github</a></p>
-        </li>
-      </ul>
+      <p>
+        You've hit the index page of my demo site. 
+        My homepage is <a href="http://discobot.net/">here</a>.
+      </p>
+
+      <section class="demo">
+        <div class="title"><h2><a href="helium-kitchen-sink.html">Helium Kitchen Sink</a></h2></div>
+        <p class="p">
+          A showcase of all helium controls for your tinkering pleasure. 
+          Helium is an open-source rich controls library for the browser.
+        </p>
+        <p>Documentation and source code on <a href="http://github.com/skid/helium">Github</a></p>
+      </section>
+
+      <section class="demo">
+        <div class="title"><h2><a href="helium-grid.html">Helium Grid</a></h2></div>
+        <p class="p">
+          An example that shows off the capabilities of the helium grid control. 
+          Helium is an open-source rich controls library for the browser.
+        </p>
+        <p>Documentation and source code on <a href="http://github.com/skid/helium">Github</a></p>
+      </section>
+
+      <section class="demo">
+        <div class="title"><h2><a href="angular-widgetbox.html">Angular-Widgetbox</a></h2></div>
+        <p class="p">
+          A module for angularJS that lets you place widgets into boxes and rearrange them
+          by dragging them and dropping them in other boxes. No dependencies except for angularJS and
+          document.querySelectorAll. If you've ever used iGoogle or My Yahoo - you know what I'm talking about.
+        </p>
+        <p>Documentation and source code on <a href="http://github.com/skid/angular-widgetbox">Github</a></p>
+        <p>Quick Install <code>bower install angular-widgetbox</code></p>
+      </section>
+      
+      <section class="demo">
+        <div class="title"><h2><a href="microload.html">Microload</a></h2></div>
+        <p class="p">
+          A very tiny (less than 1KB) async script/stylesheet loader. You can load scripts consecutively and in parallel, 
+          then optionally execute a callback once all is done.
+        </p>
+        <p>Documentation and source code on <a href="http://github.com/skid/microload">Github</a></p>
+        <p>Quick Install <code>bower install microload</code></p>
+      </section>
     </main>
   </body>
 </html>
