Added helium kitchen sink

--- a/index.html
+++ b/index.html
@@ -10,54 +10,56 @@
     <link rel="stylesheet" type="text/css" href="static/theme.css">
   </head>
   <body>
-    <header>
-      <h1>DEMOOOOS!</h1>
-    </header>
-    <main>
-      <p>
-        You've hit the index page of my demo site. 
-        My homepage is <a href="http://discobot.net/">here</a>.
-      </p>
-
-      <section class="demo">
-        <div class="title"><h2><a href="helium-kitchen-sink.html">Helium Kitchen Sink</a></h2></div>
-        <p class="p">
-          A showcase of all helium controls for your tinkering pleasure. 
-          Helium is an open-source rich controls library for the browser.
+    <div id="container">
+      <header>
+        <h1>DEMOOOOS!</h1>
+      </header>
+      <main>
+        <p>
+          You've hit the index page of my demo site. 
+          My homepage is <a href="http://discobot.net/">here</a>.
         </p>
-        <p>Documentation and source code on <a href="http://github.com/skid/helium">Github</a></p>
-      </section>
 
-      <section class="demo">
-        <div class="title"><h2><a href="helium-grid.html">Helium Grid</a></h2></div>
-        <p class="p">
-          An example that shows off the capabilities of the helium grid control. 
-          Helium is an open-source rich controls library for the browser.
-        </p>
-        <p>Documentation and source code on <a href="http://github.com/skid/helium">Github</a></p>
-      </section>
+        <section class="demo">
+          <div class="title"><h2><a href="helium-kitchen-sink.html">Helium Kitchen Sink</a></h2></div>
+          <p class="p">
+            A showcase of all helium controls for your tinkering pleasure. 
+            Helium is an open-source rich controls library for the browser.
+          </p>
+          <p>Documentation and source code on <a href="http://github.com/skid/helium">Github</a></p>
+        </section>
 
-      <section class="demo">
-        <div class="title"><h2><a href="angular-widgetbox.html">Angular-Widgetbox</a></h2></div>
-        <p class="p">
-          A module for angularJS that lets you place widgets into boxes and rearrange them
-          by dragging them and dropping them in other boxes. No dependencies except for angularJS and
-          document.querySelectorAll. If you've ever used iGoogle or My Yahoo - you know what I'm talking about.
-        </p>
-        <p>Documentation and source code on <a href="http://github.com/skid/angular-widgetbox">Github</a></p>
-        <p>Quick Install <code>bower install angular-widgetbox</code></p>
-      </section>
+        <section class="demo">
+          <div class="title"><h2><a href="helium-grid.html">Helium Grid</a></h2></div>
+          <p class="p">
+            An example that shows off the capabilities of the helium grid control. 
+            Helium is an open-source rich controls library for the browser.
+          </p>
+          <p>Documentation and source code on <a href="http://github.com/skid/helium">Github</a></p>
+        </section>
+
+        <section class="demo">
+          <div class="title"><h2><a href="angular-widgetbox.html">Angular-Widgetbox</a></h2></div>
+          <p class="p">
+            A module for angularJS that lets you place widgets into boxes and rearrange them
+            by dragging them and dropping them in other boxes. No dependencies except for angularJS and
+            document.querySelectorAll. If you've ever used iGoogle or My Yahoo - you know what I'm talking about.
+          </p>
+          <p>Documentation and source code on <a href="http://github.com/skid/angular-widgetbox">Github</a></p>
+          <p>Quick Install <code>bower install angular-widgetbox</code></p>
+        </section>
       
-      <section class="demo">
-        <div class="title"><h2><a href="microload.html">Microload</a></h2></div>
-        <p class="p">
-          A very tiny (less than 1KB) async script/stylesheet loader. You can load scripts consecutively and in parallel, 
-          then optionally execute a callback once all is done.
-        </p>
-        <p>Documentation and source code on <a href="http://github.com/skid/microload">Github</a></p>
-        <p>Quick Install <code>bower install microload</code></p>
-      </section>
-    </main>
+        <section class="demo">
+          <div class="title"><h2><a href="microload.html">Microload</a></h2></div>
+          <p class="p">
+            A very tiny (less than 1KB) async script/stylesheet loader. You can load scripts consecutively and in parallel, 
+            then optionally execute a callback once all is done.
+          </p>
+          <p>Documentation and source code on <a href="http://github.com/skid/microload">Github</a></p>
+          <p>Quick Install <code>bower install microload</code></p>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
 
